--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "react-front",
+  "name": "react-typescript-scss-new",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-router": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-scripts-scss-ts": "2.17.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -17,11 +14,10 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/react-router": "^4.4.1",
     "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.9",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
+    "@types/node": "^10.12.10",
+    "@types/react": "^16.7.7",
+    "@types/react-dom": "^16.0.10",
     "typescript": "^3.1.6"
   }
 }
